--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,10 @@ baseurl: ""
 redcarpet:
   extensions: [strikethrough, tables]
 
+plugins:
+  - jekyll-seo-tag
+  - jekyll-sitemap
+
 sass:
   sass_dir: public/css
   style: :compressed
