--- a/_data/brume.yml
+++ b/_data/brume.yml
@@ -1,4 +1,4 @@
 name: Brume
 author: Tomoya Takano
 description: |
-    Academic website of Tomoya Takano, PhD student at Tohoku University, Japan
+    Academic website of Tomoya Takano
