--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,6 @@ github_username: tomoyatakano
 googlescholar_username:	a0Boi-0AAAAJ
 researchgate_username: Tomoya_Takano
 orcid_username: 0000-0002-0178-9707
-email_username: takanot@hirosaki-u.ac.jp
+email_username: takanot@bosai.go.jp
 
 google_analytics: UA-129038024-1
